--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Arquivos e diretórios a serem ignorados pelo Git
-
 # Arquivos de compilação e binários
 *.o
 *.pyc
@@ -18,7 +16,7 @@ build/
 # Arquivos de configuração
 *.ini
 
-# Arquivos específicos
+# Google Drive
 desktop.ini
 
 # Outros arquivos e diretórios
